KiezAtlas 1.6.2 improved with 1) fixing multi-field filter bug (all topics included now) 2) updating filter GUI after a Map change 3) introducing caching of listedTopics, resulting in much better performance during filter and sort actions 4) filtering functionality on already filtered subsets was removed 5) improving circular letter feature     a) Tab Seperated File is written in LATIN 1 and as a .txt     b) Page explains to download the .txt file Minor improvements in this revision are: a) improved code readability b) css fix is not excluded for ie7 now and new asc arrow for visualising sort c) updated google maps logo

--- a/trunk/pages/kiezatlas.css
+++ b/trunk/pages/kiezatlas.css
@@ -76,6 +76,10 @@ body {
 	color: #666666;
 }
 
+.list-highlightcolumnheader:after { 
+        content: url("../images/arrow_up.gif")" ";
+}
+
 /* DeepaMehta info generator: outmost container for label/content pairs */
 .info-container {
 }
